run ef identity

--- a/AT_Management/appsettings.json
+++ b/AT_Management/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ATConnectionString": "Server=PC-01\\CONGHUNG;Database=ATDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
